<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/greyish_brown"
  tools:context=".presentation.ui.jamquery_list.JamqueryListActivity">

  <FrameLayout
    android:id="@+id/edit_text_container"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/edit_text_query"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="5dp"
      android:textColor="@color/white_two"
      app:backgroundTint="@color/white_two"
      tools:text="android"/>

  </FrameLayout>

  <android.support.v7.widget.RecyclerView
    android:id="@+id/jamquery_list"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:clipToPadding="false"
    android:padding="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_text_container"
    tools:listitem="@layout/item_jamquery"/>

  <include
    android:id="@+id/jamquery_list_empty_view"
    layout="@layout/stub"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edit_text_container"/>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab_add"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:src="@drawable/ic_add"
    app:fabSize="normal"
    app:layout_anchor="@+id/container"
    app:layout_anchorGravity="bottom|right|end"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>